--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,6 +37,8 @@
             </intent-filter>
         </receiver>
 
+        <receiver android:name=".receiver.ChecagemBroadCastReceiver"/>
+
         <service android:name=".service.MonitoradorService"/>
 
     </application>
